# tdsj

./: .project  README.md
Arduino/shift_hc595_01/: shift_hc595_01.ino
GtkTest/: .cproject  .project
GtkTest/src/: GtkTest.c
GtkTreeView/: .cproject  .project
GtkTreeView/src/: tree_view.c
GtkTreeViewThree/: .cproject  .project  gtk_tree_view_three.c
GtkTreeViewTwo/: .cproject  .project  tree_view_two.c
bacade_test_one/: .cproject  .project  Makefile  bacade  bacade-gresource.c  bacade-gresource.h  bacade.gresource  bacade.gresource.xml  dialog_input.glade~  dialog_input.ui~  window_main.ui  window_main.ui~
bacade_test_one/Debug/: bacade-gresource.d  bacade_test_one  makefile  subdir.mk
bacade_test_one/Debug/src/: main.d  print.d  subdir.mk
bacade_test_one/Gtk/: dialog1.ui  dialog_input.ui  menu.ui  window_main.ui
bacade_test_one/data/: Makefile.am  Makefile.in  bacade-template.appdata.xml  bacade-template.desktop  bacade_icona.xcf
bacade_test_one/src/: main.c  print.c  print.h
folder_1/: .cproject  .project  example01.c
folder_2/: .cproject  .project  example02.c
glikemia/: .cproject  .project  Doxygen  SHA256SUM  glikemia  index.md  main.c
glikemia/doc/html/: files.html  formula.repository  globals.html  globals_func.html  index.html  main_8c.html  (+7 more)
glikemia/po/: SHA256SUM  messages.po  pl.po
gnu-hello-world-0.7/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  gnu-hello-world.spec
gnu-hello-world-0.7/data/: Makefile.am  Makefile.in  gnu_hello_world.appdata.xml.in  gnu_hello_world.desktop
gnu-hello-world-0.7/icons/: Makefile.am  Makefile.in
gnu-hello-world-0.7/po/: Makefile.in.in  Makevars  POTFILES.in  en.gmo  en.po  gnu_hello_world.pot  pl.gmo  pl.po
gnu-hello-world-0.7/src/: Makefile.am  Makefile.in  main.c
gnu-hello-world-1.0/: ChangeLog  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac
gnu-hello-world-1.0/data/: Makefile  Makefile.am  Makefile.in  org.majsterklepka.hello.appdata.xml  org.majsterklepka.hello.desktop  org.majsterklepka.hello.desktop.in  tmpl.appdata.xml.in
gnu-hello-world-1.0/icons/: Makefile  Makefile.am  Makefile.in
gnu-hello-world-1.0/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  en.gmo  en.po  gnu-hello-world.pot  pl.gmo  pl.po
gnu-hello-world-1.0/src/: Makefile  Makefile.in  hello.h  main.c
grid_view/: .cproject  .project
gtkfilechooserdialog/: Makefile  file-1  file-1.c
iban-validation/: .cproject  .project  README.md  iban_val.h  interface.glade  interface.glade~  main.c
iban-validation/Debug/: .project  iban-validation  main.d  makefile  objects.mk  subdir.mk
iban-validation/icons/: .project
image-viewer/: .cproject  .project  README.md
image-viewer/Debug/: image-viewer  makefile  objects.mk
image-viewer/src/: function.c  function.h  image-viewer.c
parabole/: .cproject  .project  parabole.c
parabole/Debug/: makefile  parabole  parabole.d  subdir.mk
pi_approximation/: .cproject  .project  main.c
pi_approximation/Debug/: makefile  pi_approximation
pi_aproksymation/: .cproject  .project  main.c
pi_aproksymation/Debug/: pi_aproksymation
sqlite-gtk/: .cproject  .project
sqlite-gtk/data/: expenses.db
sqlite-gtk/src/: function.c  function.h  sqlite-gtk.c
sqlite-setup/: .cproject  .project  main.c  sqlite-setup.h
sqlite3/: insert.c
tree_view/: grid_view.c
xml_reader/: .cproject  .project  example_data.xml  main.c
xml_reader/Debug/: XML_Reader  main.d  makefile  objects.mk  subdir.mk
(+10 files in other folders)
