prefix = @prefix@
datadir = @datadir@
desktopdir = @datadir@/applications
appdatadir = @datadir@/appdata
metainfodir = @datadir@/metainfo

desktop_file = org.majsterklepka.hello.desktop
appdata_file = org.majsterklepka.hello.appdata.xml
appdata_in_tmp = tmpl.appdata.xml.in 
desktop_in_tmp = org.majsterklepka.hello.desktop.in

EXTRA_DIST = $(desktop_file) $(appdata_file) $(appdata_in_tmp) $(desktop_in_tmp)

desktop_DATA = $(desktop_file)
metainfo_DATA = $(appdata_file)

